<resources>
    <string name="app_name">LoginSignUpSqliteDatabase</string>
    <string name="ok">OK</string>
    <string name="un">User Name:</string>
    <string name="ei">Email Id:</string>
    <string name="pw">Password:</string>
    <string name="log">Login</string>
    <string name="reg">Register</string>
    <string name="out">Logout</string>
    <string name="ext">Exit</string>
    <string name="min">User Details</string>
    <string name="adm">Admin</string>
</resources>